--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,24 +6,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_gravity="center"
-    tools:context=".MainActivity" >
+    tools:context=".Signup" >
 
     <LinearLayout
         android:id="@+id/titleWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="60dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_mypage"
+            android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Page"
-            android:textColor="@color/mindfulBrown_80"
+            android:layout_weight="1"
+            android:layout_marginLeft="20dp"
+            android:text="&lt;"
+            android:textSize="40dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.6"
+            android:text="회원가입"
             android:textSize="40dp"
             android:textStyle="bold" />
 
@@ -33,79 +40,112 @@
         android:id="@+id/contentWrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="10"
         android:gravity="center"
         android:orientation="vertical"
-        android:paddingBottom="20sp">
+        android:paddingBottom="20sp"
+        android:layout_marginTop="25dp">
 
         <LinearLayout
+            android:id="@+id/idWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_weight="1"
+                android:text="ID"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_email"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginRight="15sp"
+                android:layout_weight="1"
+                android:hint="Email"
+                android:textAlignment="viewEnd"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/pwdWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15sp"
+                android:layout_weight="1"
+                android:text="Password"
+                android:textAlignment="viewStart"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_pwd"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginRight="15sp"
+                android:layout_weight="1"
+                android:hint="Password"
+                android:textAlignment="viewEnd"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/nameWrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15sp"
                 android:layout_weight="1"
                 android:text="@string/profile_name"
                 android:textAlignment="viewStart"
-                android:textColor="@color/mindfulBrown_80"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_name"
+            <EditText
+                android:id="@+id/et_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20sp"
+                android:layout_height="48dp"
+                android:layout_marginRight="15sp"
                 android:layout_weight="1"
-                android:text="-"
+                android:hint="Name"
                 android:textAlignment="viewEnd"
                 android:textSize="18sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15sp"
-                android:layout_weight="1"
-                android:text="@string/profile_email"
-                android:textAlignment="viewStart"
-                android:textColor="@color/mindfulBrown_80"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tv_email"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="20sp"
-                android:layout_weight="1"
-                android:text="-"
-                android:textAlignment="viewEnd"
-                android:textSize="18sp" />
-
         </LinearLayout>
 
         <Button
-            android:id="@+id/btn_logout"
+            android:id="@+id/btn_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/mindfulBrown_80"
-            android:layout_marginBottom="80dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-            android:text="LOG OUT"
+            android:text="Sign Up"
             android:textColor="@color/white" />
+
     </LinearLayout>
 </LinearLayout>
