--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.NavigationBar" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/mindfulBrown_20</item>
+        <item name="colorButtonNormal">@color/mindfulBrown_80</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/mindfulBrown_80</item>
+        <item name="colorSecondaryVariant">@color/mindfulBrown_60</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="1">@color/mindfulBrown_20</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <!-- window background color. -->
+        <item name="android:windowBackground">@color/mindfulBrown_20</item>
     </style>
     <style name="Theme.NavigationBar" parent="Base.Theme.NavigationBar" />
 </resources>
