--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -1,22 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:gravity="center"
     android:orientation="vertical"
     tools:context=".QuizFragment"
-    android:layout_marginBottom="80sp">
+    android:layout_marginBottom="30sp">
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginTop="59dp"
+        android:text="📖"
+        android:textSize="100sp"
+        android:textStyle="bold" />
+
 
     <Button
         android:id="@+id/button1"
-        android:layout_width="380dp"
-        android:layout_height="180dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="231dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="5"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:backgroundTint="@color/MidfulBrown60"
         android:text="알쓸신잡"
         android:textColor="#ffffff"
@@ -25,32 +35,16 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="380dp"
-        android:layout_height="180dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="52dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:layout_weight="5"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:backgroundTint="@color/MidfulBrown60"
         android:textColor="#ffffff"
         android:text="퀴즈"
         android:textSize="30sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="142dp"
-        android:layout_marginTop="59dp"
-        android:text="📖"
-        android:textSize="100sp"
-        android:textStyle="bold" />
-</RelativeLayout>
+</LinearLayout>
