--- a/app/src/main/res/layout/activity_earthquake1.xml
+++ b/app/src/main/res/layout/activity_earthquake1.xml
@@ -1,61 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8E4E8"
+    android:background="#F7F4F2"
+    android:orientation="vertical"
     tools:context=".knowledge2">
+
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/mindfulBrown_20"
+        android:text="@string/back"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="86dp"
+        android:layout_marginEnd="41dp"
+        android:gravity="left"
+        android:text="지진 대피소에\n반려동물도\n함께 대피해도 될까?"
+        android:textColor="#404040"
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="556dp"
-        android:layout_height="364dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="228dp"
-        android:layout_marginBottom="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="126dp"
         android:gravity="left"
         android:lineSpacingExtra="7dp"
         android:text="지진 대피소에는 반려동물이 함께\n갈 수 없어 재해구조법 3조는 구호\n대상을 ‘이재민, 일시대피자, 이외 재해로\n인한 심리적 안정과 사회 적응 지원이 필요한\n사람으로서 대통령령으로 정하는 사람’으로\n규정해두었기 때문이야.\n하지만, 정부에서 반려동물 보호자에게\n제공하고 있는 재난 대응 가이드라인도 있으니\n반려동물을 사랑하는 반려인이라면\n한 번씩 참고해!"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewQ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="72dp"
-        android:text="Q. "
-        android:textColor="#404040"
-        android:textSize="80sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="258dp"
-        android:layout_height="144dp"
-        android:layout_marginTop="56dp"
-        android:gravity="left"
-        android:lineSpacingExtra="3dp"
-        android:text="지진 대피소에\n반려동물도\n함께 대피해도 될까?"
-        android:textColor="#404040"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.79"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewA"
-        android:layout_width="67dp"
-        android:layout_height="86dp"
-        android:layout_marginTop="212dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="68dp"
+        android:layout_height="76dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="238dp"
+        android:layout_marginEnd="23dp"
         android:text="A. "
         android:textColor="#404040"
         android:textSize="70sp"
@@ -66,15 +68,25 @@
         android:id="@+id/button_123"
         android:layout_width="344dp"
         android:layout_height="59dp"
-        android:layout_marginBottom="71dp"
-        android:background="#4C7380"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="632dp"
+        android:background="@color/MidfulBrown60"
         android:text="반려동물 보호자 재난 가이드라인"
+        android:textColor="#ffffff"
         android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.522"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="1.0" />
+        android:textStyle="bold" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/textViewQ"
+        android:layout_width="76dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="112dp"
+        android:text="Q. "
+        android:textColor="#404040"
+        android:textSize="80sp" />
+
+</RelativeLayout>
