--- a/app/src/main/res/layout/activity_war.xml
+++ b/app/src/main/res/layout/activity_war.xml
@@ -4,18 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8E4E8"
+    android:background="#F7F4F2"
     android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:backgroundTint="@color/mindfulBrown_20"
+        android:text="@string/back"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:textColor="#000000"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="75dp"
         android:text="전시 상황 알쓸신잡"
-        android:textColor="#000000"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="45dp"
         android:textStyle="bold" />
 
@@ -23,10 +36,11 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text=": 알아두면 쓸데없는 신기한 잡학지식"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="20dp"
         android:textStyle="bold" />
 
@@ -37,10 +51,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="55dp"
         android:background="@drawable/solid_button"
+        android:backgroundTint="@color/green_50"
         android:gravity="center"
-        android:text="알쓸신잡1"
-        android:textColor="#000000"
-        android:textSize="23dp" />
+        android:text="이것 모르면 대피 못 한다!\n경보의 종류"
+        android:textColor="@color/mindfulBrown_80"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
 
     <android.widget.Button
@@ -50,10 +66,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:background="@drawable/solid_button"
+        android:backgroundTint="@color/green_50"
         android:gravity="center"
-        android:text="알쓸신잡2"
-        android:textColor="#000000"
-        android:textSize="23dp" />
+        android:text="'저 사람 좀 수상한 것 같아..'\n전시 상황 신고 대상"
+        android:textColor="@color/mindfulBrown_80"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <android.widget.Button
         android:id="@+id/button3"
@@ -62,10 +80,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:background="@drawable/solid_button"
+        android:backgroundTint="@color/green_50"
         android:gravity="center"
-        android:text="알쓸신잡3"
-        android:textColor="#000000"
-        android:textSize="23dp" />
+        android:text="생존 가방을 미리 챙겨두라던데\n무엇을 챙겨야할까?"
+        android:textColor="@color/mindfulBrown_80"
+        android:textSize="20dp"
+        android:textStyle="bold" />
 
     <android.widget.Button
         android:id="@+id/button4"
@@ -74,10 +94,12 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="25dp"
         android:background="@drawable/solid_button"
+        android:backgroundTint="@color/green_50"
         android:gravity="center"
         android:text="알쓸신잡4"
-        android:textColor="#000000"
-        android:textSize="23dp" />
+        android:textColor="@color/mindfulBrown_80"
+        android:textSize="23dp"
+        android:textStyle="bold" />
 
 
 </LinearLayout>
