--- a/app/src/main/res/layout/activity_war3.xml
+++ b/app/src/main/res/layout/activity_war3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D8E4E8"
+    android:background="#F7F4F2"
     tools:context=".MainActivity">
 
     <TextView
