--- a/app/src/main/res/layout/activity_war2.xml
+++ b/app/src/main/res/layout/activity_war2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,55 +7,69 @@
     android:background="#F7F4F2"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/mindfulBrown_20"
+        android:text="@string/back"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="382dp"
         android:layout_height="317dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="88dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="136dp"
         android:gravity="left"
         android:lineSpacingExtra="7sp"
         android:text="1. 독성이 강한 가스 냄새\n2. 불온선전물, 불온문서, 공중 낙하하는 자\n3. 적군 무장공비 간첩 간첩선박 거동수상자\n4. 범죄자, 징집 및 동원 기피자\n5. 유언비어를 퍼트리거나 주민을 선동하는 자\n6. 불발탄, 지뢰 등의 이상한 물체\n\n\n ※신고 연락은 112 또는 113"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3" />
-
-    <TextView
-        android:id="@+id/textViewQ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="96dp"
-        android:text="Q. "
-        android:textColor="#404040"
-        android:textSize="80sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="309dp"
         android:layout_height="86dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="112dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="-6dp"
         android:text="신고해야하는\n사람이나 물체 등의 대상"
         android:textColor="#404040"
         android:textSize="28sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewQ"
+        android:layout_width="77dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="118dp"
+        android:text="Q. "
+        android:textColor="#404040"
+        android:textSize="80sp" />
 
     <TextView
         android:id="@+id/textViewA"
         android:layout_width="67dp"
         android:layout_height="86dp"
-        android:layout_marginTop="192dp"
-        android:layout_marginEnd="28dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="230dp"
+        android:layout_marginEnd="22dp"
         android:text="A. "
         android:textColor="#404040"
-        android:textSize="70sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="70sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
