--- a/app/src/main/res/layout/activity_war3.xml
+++ b/app/src/main/res/layout/activity_war3.xml
@@ -7,13 +7,28 @@
     android:background="#F7F4F2"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/mindfulBrown_20"
+        android:text="@string/back"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textView6"
         android:layout_width="236dp"
         android:layout_height="83dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="134dp"
+        android:layout_marginEnd="69dp"
         android:text="생존 가방에는\n무엇을 챙겨야할까?"
         android:textColor="#404040"
         android:textSize="28sp"
@@ -27,8 +42,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="120dp"
         android:text="Q. "
         android:textColor="#404040"
         android:textSize="80sp"
@@ -39,9 +54,11 @@
         android:id="@+id/imageView3"
         android:layout_width="402dp"
         android:layout_height="374dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="183dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="223dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
