--- a/app/src/main/res/drawable/option_background.xml
+++ b/app/src/main/res/drawable/option_background.xml
@@ -5,9 +5,9 @@
     <!--외곽선-->
     <stroke
         android:width="1dp"
-        android:color="#D8E4E8"/>
+        android:color="@color/mindfulBrown_20"/>
     <!--내부 색상-->
-    <solid android:color="#D8E4E8"/>
+    <solid android:color="@color/mindfulBrown_20"/>
     <!--모서리둥근정도-->
     <corners android:radius="20dp"/>
 
