--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4c7380"
+    android:background="@color/mindfulBrown_20"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
         android:text="@string/QUiz"
-        android:textColor="#D8E4E8"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck" />
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textColor="#D8E4E8"
+        android:textColor="@color/mindfulBrown_80"
         android:text="@string/zz"
         android:textSize="35sp"
         android:textStyle="bold"/>
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         android:text="@string/cv"
-        android:textColor="#D8E4E8"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck" />
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:text="@string/study"
-        android:textColor="#D8E4E8"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -69,9 +69,9 @@
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
         android:layout_marginTop="30dp"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:text="@string/start"
         android:textStyle="bold" />
 
