--- a/app/src/main/res/layout/activity_quiz2.xml
+++ b/app/src/main/res/layout/activity_quiz2.xml
@@ -4,26 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4c7380"
+    android:background="@color/mindfulBrown_20"
     android:orientation="vertical"
     tools:context=".Quiz2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#4c7380"
+        android:background="@color/mindfulBrown_20"
         tools:context=".MainActivity2">
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
             android:layout_marginBottom="40dp"
-            android:backgroundTint="#4c7380"
+            android:backgroundTint="@color/mindfulBrown_20"
             android:text="@string/back"
-            android:textColor="#000000"
+            android:textColor="@color/mindfulBrown_80"
             android:textStyle="bold" />
 
         <TextView
@@ -34,7 +32,7 @@
             android:paddingLeft="80dp"
             android:paddingTop="20dp"
             android:text="@string/stage"
-            android:textColor="#000000"
+            android:textColor="@color/mindfulBrown_80"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -45,10 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
         android:checkable="true"
         android:text="@string/_1"
-        android:textColor="#000000"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/gray_40"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -57,9 +57,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
         android:text="@string/_2"
-        android:textColor="#000000"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/gray_40"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -68,9 +70,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
         android:text="@string/_3"
-        android:textColor="#000000"
+        android:textColor="@color/gray_40"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -79,9 +83,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
         android:text="@string/_4"
-        android:textColor="#000000"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/gray_40"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -90,9 +96,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="#D8E4E8"
+        android:backgroundTint="@color/green_50"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:text="@string/_5"
-        android:textColor="#000000"
+        android:textColor="@color/gray_40"
         android:textSize="20sp"
         android:textStyle="bold" />
 
