--- a/app/src/main/res/layout/activity_quiz5.xml
+++ b/app/src/main/res/layout/activity_quiz5.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="@color/mindfulBrown_10"
     android:padding="16dp"
     tools:context=".Quiz3">
 
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/question"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="18sp"
         android:textStyle="bold"/>
 
@@ -41,7 +42,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="@string/count_label"
-            android:textColor="@color/black"
+            android:textColor="@color/mindfulBrown_80"
             android:textSize="20sp"/>
 
     </LinearLayout>
@@ -55,6 +56,7 @@
         android:background="@drawable/option_background"
         android:gravity="center"
         android:text="선택지 1"
+        android:textColor="@color/mindfulBrown_80"
         android:textStyle="bold"
         android:textSize="18sp"/>
 
@@ -67,6 +69,7 @@
         android:background="@drawable/option_background"
         android:gravity="center"
         android:text="선택지 2"
+        android:textColor="@color/mindfulBrown_80"
         android:textStyle="bold"
         android:textSize="18sp" />
 
@@ -79,6 +82,7 @@
         android:background="@drawable/option_background"
         android:gravity="center"
         android:text="선택지 3"
+        android:textColor="@color/mindfulBrown_80"
         android:textStyle="bold"
         android:textSize="18sp" />
 
@@ -86,11 +90,11 @@
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4c7380"
+        android:backgroundTint="@color/green_50"
         android:layout_weight="0.5"
         android:layout_marginTop="20dp"
         android:text="@string/submit"
-        android:textColor="#D8E4E8"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="18sp"
         android:textStyle="bold" />
 
