--- a/app/src/main/res/layout/activity_quiz8.xml
+++ b/app/src/main/res/layout/activity_quiz8.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/mindfulBrown_20"
     tools:context=".Quiz8">
 
 
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="Quiz 결과"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="55sp"
         android:textStyle="bold" />
 
@@ -24,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="120dp"
         android:text="수고 많았어요!!"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="50sp"
         android:textStyle="bold"/>
 
@@ -34,7 +34,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="210dp"
         android:text="당신의 점수는"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="40sp"
         android:textStyle="bold"/>
 
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textView5"
         android:layout_centerHorizontal="true"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:layout_marginTop="280dp"
         android:textSize="40sp"
         android:textStyle="bold"/>
@@ -56,7 +56,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="550dp"
         android:text="오답 확인은 알쓸신잡에서!"
-        android:textColor="#4c7380"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="30sp"
         android:textStyle="bold"/>
 
@@ -66,9 +66,13 @@
         android:layout_height="80dp"
         android:layout_below="@id/score_text"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="#4c7380"
+        android:backgroundTint="@color/green_50"
         android:layout_marginTop="200dp"
-        android:text="메인으로" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:text="메인으로"
+        android:textColor="@color/mindfulBrown_80"
+        android:textStyle="bold"/>
 
 
 
