--- a/app/src/main/res/layout/activity_earthquake2.xml
+++ b/app/src/main/res/layout/activity_earthquake2.xml
@@ -26,8 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="85dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="79dp"
         android:text="Q. "
         android:textColor="#404040"
         android:textSize="80sp" />
@@ -35,15 +35,15 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="377dp"
-        android:layout_height="489dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="29dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="37dp"
         android:gravity="left"
-        android:lineSpacingExtra="7dp"
-        android:text="지진은 지구 내부의 움직임으로\n일어나는 자연재해이기 때문에 발생한 특정 지역이 아니더라도 인근 지역에서도 여진이 발생할 수 있어.\n여진이란 지진의 여파로 인해 발생하는 지진의 뒷 일을 뜻하는데, 여진 등의 위험에 방지하기 위하여 인근 지역에 거주하고 있는 국민들에게도 지진 재난 문자를 발송하고 있다고 해.\n규모 3.0-3.5는 반경 50km, 규모 3.5-4.0은 반경 80km, 규모 4.0 이상의 지진은 전국으로 재난 문자를 송출하도록 되어있어 \n그러므로 재난 문자를 받게 된다면 \n현재 상황에 대한 경각심을 갖는 것도 중요해!"
+        android:lineSpacingExtra="6dp"
+        android:text="지진은 지구 내부의 움직임으로\n일어나는 자연재해이기 때문에 발원지 인근 지역에서도 여진이 발생할 수 있어.\n여진이란 지진의 여파로 인해 발생하는 지진의 뒷 일을 뜻하는데, 여진 등의 위험에 방지하기 위하여 인근 지역에 거주하고 있는 국민들에게도 지진 재난 문자를 발송하고 있다고 해.\n규모 3.0-3.5는 반경 50km, 규모 3.5-4.0은 반경 80km, 규모 4.0 이상의 지진은 전국으로 재난 문자를 송출하도록 되어있어 \n그러므로 재난 문자를 받게 된다면 \n현재 상황에 대한 경각심을 갖는 것도 중요해!"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -53,8 +53,8 @@
         android:layout_height="123dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="21dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="19dp"
         android:gravity="left"
         android:text="내가 거주하지 않는\n지역의 지진 재난 문자는\n왜 오는걸까?"
         android:textColor="#404040"
@@ -67,8 +67,8 @@
         android:layout_height="85dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="162dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginTop="154dp"
+        android:layout_marginEnd="34dp"
         android:text="A. "
         android:textColor="#404040"
         android:textSize="70sp" />
