--- a/app/src/main/res/layout/activity_war2.xml
+++ b/app/src/main/res/layout/activity_war2.xml
@@ -24,11 +24,13 @@
         android:id="@+id/textView4"
         android:layout_width="382dp"
         android:layout_height="317dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="13dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="136dp"
+        android:layout_marginBottom="73dp"
         android:gravity="left"
         android:lineSpacingExtra="7sp"
         android:text="1. 독성이 강한 가스 냄새\n2. 불온선전물, 불온문서, 공중 낙하하는 자\n3. 적군 무장공비 간첩 간첩선박 거동수상자\n4. 범죄자, 징집 및 동원 기피자\n5. 유언비어를 퍼트리거나 주민을 선동하는 자\n6. 불발탄, 지뢰 등의 이상한 물체\n\n\n ※신고 연락은 112 또는 113"
@@ -41,8 +43,8 @@
         android:layout_height="86dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="134dp"
-        android:layout_marginEnd="-6dp"
+        android:layout_marginTop="118dp"
+        android:layout_marginEnd="1dp"
         android:text="신고해야하는\n사람이나 물체 등의 대상"
         android:textColor="#404040"
         android:textSize="28sp"
@@ -54,8 +56,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="118dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="98dp"
         android:text="Q. "
         android:textColor="#404040"
         android:textSize="80sp" />
@@ -66,8 +68,8 @@
         android:layout_height="86dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="230dp"
-        android:layout_marginEnd="22dp"
+        android:layout_marginTop="213dp"
+        android:layout_marginEnd="32dp"
         android:text="A. "
         android:textColor="#404040"
         android:textSize="70sp" />
