--- a/app/src/main/res/layout/activity_war4.xml
+++ b/app/src/main/res/layout/activity_war4.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="111dp"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="26dp"
         android:text="공습경보가 울리면\n안전한 곳에 있어야할까?\n대피해야할까?"
         android:textSize="28sp"
@@ -40,35 +40,35 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="101dp"
         android:text="Q. "
         android:textColor="#404040"
         android:textSize="80sp" />
 
     <TextView
         android:id="@+id/textView10"
-        android:layout_width="wrap_content"
+        android:layout_width="381dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="260dp"
-        android:layout_marginEnd="-13dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="242dp"
+        android:layout_marginEnd="15dp"
         android:lineSpacingExtra="7sp"
-        android:text="공습경보가 울리면 집에 있지말고, 즉시!\n지하대피소 등 안전한 곳으로 빨리\n대피하고 고층건물에서는 지하실 또는 아랫층\n으로 대피해야해.\n화생방 공격에 대비하여 방독면이나\n개인보호장비와 같은 생필품도 챙겨야하지.\n만약 차량에 타고있었다면 도로 오른쪽에 차량을 세워두고 안전한 곳으로 대피해야해. \n그 이후에는 라디오나 방송매체를 통해\n정부의 안내를 따라서 행동해야해."
+        android:text="공습경보가 울리면 집에 있지말고,\n즉시! 지하대피소 등 안전한 곳으로 \n대피하고 고층건물에서는 지하실 또는 아랫층\n으로 대피해야해.\n화생방 공격에 대비하여 방독면이나\n개인보호장비와 같은 생필품도 챙겨야하지.\n만약 차량에 타고있었다면 도로 우측에 차량을 \n세워두고 안전한 곳으로 대피해야해. \n그 이후에는 라디오나 방송매체를 통해\n정부의 안내를 따라서 행동해야해."
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewA"
-        android:layout_width="67dp"
-        android:layout_height="86dp"
+        android:layout_width="68dp"
+        android:layout_height="77dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="245dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="221dp"
+        android:layout_marginEnd="24dp"
         android:text="A. "
         android:textColor="#404040"
         android:textSize="70sp"
