--- a/app/src/main/res/layout/activity_war.xml
+++ b/app/src/main/res/layout/activity_war.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="65dp"
         android:text="전시 상황 알쓸신잡"
         android:textColor="@color/mindfulBrown_80"
         android:textSize="45dp"
@@ -49,7 +49,7 @@
         android:layout_width="350dp"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/solid_button"
         android:backgroundTint="@color/green_50"
         android:gravity="center"
@@ -96,9 +96,9 @@
         android:background="@drawable/solid_button"
         android:backgroundTint="@color/green_50"
         android:gravity="center"
-        android:text="알쓸신잡4"
+        android:text="공습경보가 울렸다면!\n대피해야할까 집에 있어야할까?"
         android:textColor="@color/mindfulBrown_80"
-        android:textSize="23dp"
+        android:textSize="20dp"
         android:textStyle="bold" />
 
 
