--- a/app/src/main/res/layout/activity_knowledgeselect.xml
+++ b/app/src/main/res/layout/activity_knowledgeselect.xml
@@ -6,7 +6,8 @@
     android:layout_gravity="center"
     android:orientation="vertical"
     tools:context=".QuizFragment"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="20dp"
+    android:id="@+id/knowledgeselectWrap">
 
     <Button
         android:id="@+id/button_back"
