--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,72 +9,91 @@
     android:padding="16dp">
 
     <!-- 첫 번째 텍스트뷰 -->
+
+    <!-- 두 번째 텍스트뷰 -->
+
+    <!-- 세 번째 텍스트뷰 -->
+    <Button
+        android:id="@+id/button_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:backgroundTint="@color/mindfulBrown_20"
+        android:text="@string/back"
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="10dp"
         android:text="@string/QUiz"
         android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck" />
 
-    <!-- 두 번째 텍스트뷰 -->
+    <!-- 네 번째 텍스트뷰 -->
+
+    <!-- 이미지뷰 -->
+
+    <!-- 버튼 -->
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:textColor="@color/mindfulBrown_80"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="55dp"
         android:text="@string/zz"
+        android:textColor="@color/mindfulBrown_80"
         android:textSize="35sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
-    <!-- 세 번째 텍스트뷰 -->
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="120dp"
         android:text="@string/cv"
         android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck" />
 
-    <!-- 네 번째 텍스트뷰 -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="10dp"
         android:text="@string/study"
         android:textColor="@color/mindfulBrown_80"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <!-- 이미지뷰 -->
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="308dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="200dp"
         android:contentDescription="@string/todo"
         android:src="@drawable/img" />
 
-    <!-- 버튼 -->
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="550dp"
         android:backgroundTint="@color/green_50"
-        android:layout_marginTop="30dp"
-        android:textColor="@color/mindfulBrown_80"
         android:text="@string/start"
+        android:textColor="@color/mindfulBrown_80"
         android:textStyle="bold" />
 
 
-
-</LinearLayout>
+</RelativeLayout>
