--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -102,7 +102,7 @@
                 android:layout_height="48dp"
                 android:layout_marginRight="15sp"
                 android:layout_weight="1"
-                android:hint="Password"
+                android:hint="6자리 숫자로 구성"
                 android:textAlignment="viewEnd"
                 android:textSize="18sp" />
         </LinearLayout>
