--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -7,7 +7,8 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".QuizFragment"
-    android:layout_marginBottom="30sp">
+    android:layout_marginBottom="30sp"
+    android:id="@+id/fragmentContainer">
 
     <TextView
         android:id="@+id/textView12"
